--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resenha dos Imortais</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,13 +22,10 @@
         }
 
         .card {
-            /* background-color: #fff; */
             border-radius: 8px;
-            /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
             margin: 15px 0;
             padding: 20px;
             text-align: center;
-            /* width: 300px; */
         }
 
         .card a {
@@ -42,7 +40,7 @@
         }
 
         .card img {
-          border-radius: 25px;
+            border-radius: 25px;
         }
 
         .sponsor-img {
@@ -56,20 +54,33 @@
             padding: 20px 0;
             background-color: #333;
             color: #fff;
-            /* position: fixed; */
             bottom: 0;
             width: 100%;
         }
 
-        /* Estilos para responsividade */
+        /* Responsividade */
         @media (max-width: 768px) {
             .card {
-                width: 90%; /* Cards ocupam 90% da largura em telas menores */
+                width: 90%;
+            }
+
+            .card img {
+              width: 100%;
+            }
+
+
+            h1 {
+              font-size: 40px;
+              text-align: center;
+            }
+
+            .sponsor-img {
+              width: 70px;
             }
         }
 
         h1 {
-          font-size: 60px;
+            font-size: 60px;
         }
     </style>
 </head>
@@ -77,7 +88,7 @@
 
     <img src="images/logo_resenha.png" alt="Instagram do Resenha" style="margin-top: 5%;">
 
-    <h1><span>RESENHA D</span><span style="color: blue">OS  IMORTAIS </span></h1>
+    <h1><span>RESENHA D</span><span style="color: blue">OS IMORTAIS </span></h1>
 
     <section>
         <div class="card">
@@ -86,45 +97,20 @@
             </a>
         </div>
 
+        <!-- Repetindo cards -->
         <div class="card">
-          <a href="https://www.instagram.com/resenhadosimortais/" target="_blank">
-              <img src="images/card-resenha.png" alt="Instagram do Resenha">
-          </a>
-      </div>
-
-      <div class="card">
-        <a href="https://www.instagram.com/resenhadosimortais/" target="_blank">
-            <img src="images/card-resenha.png" alt="Instagram do Resenha">
-        </a>
-      </div>
-
-      <div class="card">
-        <a href="https://www.instagram.com/resenhadosimortais/" target="_blank">
-            <img src="images/card-resenha.png" alt="Instagram do Resenha">
-        </a>
-      </div>
+            <a href="https://www.instagram.com/resenhadosimortais/" target="_blank">
+                <img src="images/card-resenha.png" alt="Instagram do Resenha">
+            </a>
+        </div>
     </section>
 
     <section style="text-align: center; margin-bottom: 200px;">
-      <h2>Apoiadores</h2>
-      <div style="display: flex; justify-content: center; flex-wrap: wrap;">
-          <img src="https://via.placeholder.com/100x100?text=Apoiador+1" alt="Apoiador 1" style="border-radius: 50%; margin: 10px;">
-          <img src="https://via.placeholder.com/100x100?text=Apoiador+2" alt="Apoiador 2" style="border-radius: 50%; margin: 10px;">
-          <img src="https://via.placeholder.com/100x100?text=Apoiador+3" alt="Apoiador 3" style="border-radius: 50%; margin: 10px;">
-          <img src="https://via.placeholder.com/100x100?text=Apoiador+4" alt="Apoiador 4" style="border-radius: 50%; margin: 10px;">
-          <img src="https://via.placeholder.com/100x100?text=Apoiador+5" alt="Apoiador 5" style="border-radius: 50%; margin: 10px;">
-          <img src="https://via.placeholder.com/100x100?text=Apoiador+6" alt="Apoiador 6" style="border-radius: 50%; margin: 10px;">
-      </div>
-      <div style="display: flex; justify-content: center; flex-wrap: wrap;">
-        <img src="https://via.placeholder.com/70x70?text=Apoiador+4" alt="Apoiador 4" style="border-radius: 50%; margin: 10px;">
-        <img src="https://via.placeholder.com/70x70?text=Apoiador+4" alt="Apoiador 4" style="border-radius: 50%; margin: 10px;">
-        <img src="https://via.placeholder.com/70x70?text=Apoiador+4" alt="Apoiador 4" style="border-radius: 50%; margin: 10px;">
-        <img src="https://via.placeholder.com/70x70?text=Apoiador+4" alt="Apoiador 4" style="border-radius: 50%; margin: 10px;">
-    </div>
-  </section>
-
-
-
+        <h2>Apoiadores</h2>
+        <div style="display: flex; justify-content: center; flex-wrap: wrap;">
+            <img src="https://via.placeholder.com/100x100?text=Apoiador+1" alt="Apoiador 1" class="sponsor-img" style="border-radius: 50%;">
+            <img src="https://via.placeholder.com/100x100?text=Apoiador+2" alt="Apoiador 2" class="sponsor-img" style="border-radius: 50%;">
+            <img src="https://via.placeholder.com/100x100?text=Apoiador+3" alt="Apoiador 3" class="sponsor-img" style="border-radius: 50%;">
         </div>
     </section>
 
